Fixed issue with overflow.

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   margin: 0;
   padding: 0;
   box-sizing: inherit;
+  overflow: auto;
 }
 
 html {
@@ -19,9 +20,9 @@ html {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: Baskerville, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", "Fira Sans", Ubuntu, Oxygen, "Oxygen Sans", Cantarell, "Droid Sans", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Lucida Grande", Helvetica, Arial, sans-serif;
   font-size: 1.6rem;
-  font-weight: 300;
+  font-weight: 100;
   color: #000;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
